alteraçoes no ficheiro blog

--- a/html/blog.html
+++ b/html/blog.html
@@ -8,9 +8,15 @@
 </head>
 <body>
     <div>
-<h1>Meu BLOG</h1>
-<h2>Meu primeiro Post</h2>
-<h2>Meu segundo Post</h2> 
+    <h1>Meu BLOG</h1>
+    <h2>Meu primeiro Post</h2>
+        <p>os gatos fazem miau miau</p>
+    <h2>Meu segundo Post</h2> 
+        <p>Os caes fazem ão ão</p>
+    <h2>Terceiro post</h2>
+        <p>as vacas fazem muuuuu</p>
+    <h3>ultimo post</h3>
+        <p>Os porcos fazem oinc oinc</p>
     </div>
 </body>
 </html>
