adiçao do 4º post ao blog

--- a/html/blog.html
+++ b/html/blog.html
@@ -15,6 +15,8 @@
         <p>Os caes fazem ão ão</p>
     <h2>Terceiro post</h2>
         <p>as vacas fazem muuuuu</p>
+    <h2>Quarto post</h2>
+        <p>os coelhos comem cenouras</p>
     <h3>ultimo post</h3>
         <p>Os porcos fazem oinc oinc</p>
     </div>
